[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/PlayerMech.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ShockSphere.gd" type="Script" id=2]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=3]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=4]
[ext_resource path="res://Sprites/HP_Bar_port_empty.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HP_Bar_port_full.png" type="Texture" id=6]
[ext_resource path="res://Scripts/ShockSphereSignal.gd" type="Script" id=7]
[ext_resource path="res://Objects/ExplosionEffect.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="ShockSphere" type="Node2D"]
script = ExtResource( 7 )

[node name="ShockSphere" type="KinematicBody2D" parent="." groups=[
"minimap",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
explosion_effect = ExtResource( 8 )

[node name="Timer" type="Timer" parent="ShockSphere"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShockSphere"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="ShockSphere"]
position = Vector2( 20, 0 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 20 )

[node name="AttackTimer" type="Timer" parent="ShockSphere"]
one_shot = true

[node name="HealthBar" type="Node2D" parent="."]
z_index = 100

[node name="HealthBar" type="TextureProgress" parent="HealthBar"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -47.0
margin_top = -50.0
margin_right = 141.0
margin_bottom = -10.0
rect_scale = Vector2( 0.5, 0.5 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource( 4 )
target = NodePath("../ShockSphere")
flags = 55

[node name="Sprite" type="Sprite" parent="Smoothing2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 16, 400, 32, 32 )

[node name="Light2D" type="Light2D" parent="Smoothing2D"]
texture = ExtResource( 3 )
color = Color( 0.211765, 0.00784314, 0.0509804, 1 )
energy = 2.0
shadow_buffer_size = 256
